# webred

./: Cargo.toml  Makefile  README.md  rename.env
src/: main.rs
src/db/: dml.rs  models.rs
src/db/sql/ping/: add_record.sql  get_records.sql  schema.sql
src/server/: router.rs
src/settings/: config.rs
