[package]
name = "rust-recap"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
confik = "0.11"
deadpool-postgres = { version = "0.12", features = ["serde"] }
derive_more = "0.99.18"
dotenvy = "0.15.7"
env_logger = "0.11.5"
serde = "1.0.204"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
